--- a/body.css
+++ b/body.css
@@ -1,14 +1,10 @@
-h1{color:blue;font-style:italic;font-size:55px;}
-h2{color:green;font-size:50px;}
-p {font-family:微軟正黑體;font-size: 1.5em}
+body{background-color:rgb(168, 190, 238);margin: 50px;}
 
-div style{border:5px #FFAC55 solid;}
+h1{color:rgb(4, 32, 39);font-style:italic;font: size 60px;}
+h2{color:rgb(4, 32, 39);font-size:30px;}
+p {color:rgb(0, 0, 0);font-family:微軟正黑體;font-size: 1em}
 
-container {  margin:20px; 
-    background-color: lightcyan;
-    width: 100%;
-    max-width: 240px;
-    font-family: Microsoft JhengHei;
-    text-align: center;
-    font-size:20px;}
-    .solid { border-style: solid; }
+
+nav a {font-size:30px;color: black; /* 移除超連結顏色 */text-decoration: none;  /* 移除超連結底線 */}
+nav > ul {list-style: none;   /* 移除項目符號 */ margin: 20;padding: 20;}
+nav a:hover {background-color: rgb(115, 115, 115);color: black;}
