--- a/body.css
+++ b/body.css
@@ -5,6 +5,6 @@ h2{color:rgb(4, 32, 39);font-size:30px;}
 p {color:rgb(0, 0, 0);font-family:微軟正黑體;font-size: 1em}
 
 
-nav a {font-size:30px;color: black; /* 移除超連結顏色 */text-decoration: none;  /* 移除超連結底線 */}
-nav > ul {list-style: none;   /* 移除項目符號 */ margin: 20;padding: 20;}
+nav a {font-size:30px;color: black; text-decoration: none; }
+nav > ul {list-style: none;   margin: 20;padding: 20;}
 nav a:hover {background-color: rgb(115, 115, 115);color: black;}
