--- a/body.css
+++ b/body.css
@@ -8,3 +8,4 @@ p {color:rgb(0, 0, 0);font-family:微軟正黑體;font-size: 1em}
 nav a {font-size:30px;color: black; text-decoration: none; }
 nav > ul {list-style: none;   margin: 20;padding: 20;}
 nav a:hover {background-color: rgb(115, 115, 115);color: black;}
+nav {margin:0 auto;}
