--- a/body.css
+++ b/body.css
@@ -6,6 +6,5 @@ p {color:rgb(0, 0, 0);font-family:微軟正黑體;font-size: 1em}
 
 
 nav a {font-size:30px;color: black; text-decoration: none; }
-nav > ul {list-style: none;   margin: 20;padding: 20;}
+nav > ul {list-style: none;   margin:0 auto; padding: 20px;}
 nav a:hover {background-color: rgb(115, 115, 115);color: black;}
-nav {margin:0 auto;}
